--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@headlessui/react": "^1.3.0",
+    "@heroicons/react": "^1.0.2",
     "gatsby": "^2.20.2",
     "gatsby-plugin-force-trailing-slashes": "^1.0.4",
     "gatsby-plugin-react-helmet": "^3.3.2",
     "gatsby-plugin-sharp": "^2.6.9",
-    "react": "^16.12.0",
+    "react": "^16.14.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "styled-components": "^5.1.1",
+    "styled-button-component": "^4.0.0",
+    "styled-components": "^4.4.1",
+    "styled-dropdown-component": "^4.0.0",
     "tailwindcss": "^1.5.1",
     "typescript": "^3.8.3"
   },
